# hexlet-flask-example

./: .gitignore  Makefile  pyproject.toml
hexlet-flask-example/: example.py  users.json
hexlet-flask-example/templates/users/: edit.html  index.html  new.html  show.html  users.html
